# sproto-cpp

./: CMakeLists.txt  README.md  addressbook.pb  addressbook.sp  addressbookmessage.cpp  addressbookmessage.h  cppsproto.cpp  cppsproto.h  demo.cpp  spc.sh  sproto.cpp  sprotomessage.cpp  sprotomessage.h
