cmake_minimum_required(VERSION 2.8)

project(sproto)
include_directories(/usr/include/lua5.2)
link_directories(/usr/lib/x86_64-linux-gnu)
set(LIB_SRC sproto.c lsproto.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -O2")
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
add_library(sproto SHARED ${LIB_SRC})
target_link_libraries(sproto liblua5.2.so)

project(cppsproto)
set(LIB_SRC cppsproto.cpp sproto.c sprotomessage.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -O2")
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
add_library(cppsproto SHARED ${LIB_SRC})

project(demo)
link_directories(${CMAKE_SOURCE_DIR}/lib)
set(EXE_SRC demo.cpp addressbookmessage.cpp)
set(CMAKE_CXX_FLAGS "-Wall -g -O2")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
add_executable(demo ${EXE_SRC})
target_link_libraries(demo cppsproto)
